--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,7 @@ deploy:
   app: asd-dash
   on:
     repo: uva-cs3240-s20/project-102-asdfghjkl
+services:
+  - postgresql
+before_script:
+  - psql -c 'create database travis_ci_test;' -U postgres
