--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ gunicorn==20.0.4
 oauthlib==3.1.0
 psycopg2==2.8.4
 pytz==2019.3
+requests==2.23.0
+requests-oauthlib==1.3.0
 social-auth-app-django==3.1.0
 social-auth-core==3.2.0
 whitenoise==5.0.1
@@ -14,3 +16,4 @@ psycopg2-binary==2.8.5
 google-api-python-client
 google-auth-oauthlib
 iso8601
+django-sslserver
