--- a/.travis.yml
+++ b/.travis.yml
@@ -17,4 +17,4 @@ deploy:
 services:
   - postgresql
 before_script:
-  - psql -c 'create database travis_ci_test;' -U postgres
+  - psql -c 'create database dash;' -U postgres
